# sql-agent

./: .gitignore  README.md  agents.py  app.py  data_models.py  db_knowledge.py  default_prompts.json  llm_memory.py  prompts.py  pyproject.toml  requirements.txt  sql_agent.py  utils.py
docker/: docker-compose.yaml  init.sql
llm_clients/: __init__.py  base.py  gpt.py  mistral.py
