[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.8",
    "langchain-community>=0.0.28",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=0.0.6",
    "openai>=1.10.0",
    "requests>=2.31.0",
    "sqlalchemy>=1.4",
    "streamlit>=1.32.0",
    "tqdm>=4.66.0",
]
