[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain>=0.1.8",
    "langchain-community>=0.0.28",
    "langchain-mistralai>=0.2.11",
    "langchain-openai>=0.3.28",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-checkpoint-sqlite>=0.0.6",
    "langmem>=0.0.29",
    "loguru>=0.7.3",
    "openai>=1.10.0",
    "psycopg-pool>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "requests>=2.31.0",
    "sqlalchemy>=1.4",
    "streamlit>=1.32.0",
    "tqdm>=4.66.0",
]
